tests/parser/fail/field-name-collision.som
"test:
fail-message:
  - contains: foo
  - contains: defined twice
"

FieldNameCollision = (
  |a foo b c foo d|
)
